# michael-investment-intelligence-platform

./: .gitignore  README.md  pyproject.toml
.github/workflows/: antenna-ci.yml  antenna-daily.yml
agents/: README.md
apps/antenna/: README.md  __init__.py  analyze.py  brief.py  config.py  feeds.yaml  fetch.py  main.py  requirements.txt  seen.py
config/: agents.yaml  monitor_scoring.yaml  monitors.yaml  portfolio.yaml  scoring.yaml  settings.yaml  watchlists.yaml
data/: market_snapshot.yaml
data/antenna/: seen.json
docs/: ARCHITECTURE.md  SLICE2-ACCEPTANCE.md  decision-log.md  investment-thesis-log.md  known-unknowns.md  project-journal.md
reports/discovery/daily/: 2026-06-08.md  2026-06-09.md  2026-06-10.md  2026-06-11.md  2026-06-12.md  2026-06-13.md  2026-06-14.md  2026-06-15.md  2026-06-16.md  2026-06-17.md  2026-06-18.md  2026-06-19.md  2026-06-20.md  2026-06-21.md  2026-06-22.md  2026-06-23.md  2026-06-24.md  2026-06-25.md  2026-06-26.md  2026-06-27.md  2026-06-28.md  2026-06-29.md  2026-06-30.md  2026-07-01.md  2026-07-02.md  2026-07-03.md  2026-07-04.md  2026-07-05.md  2026-07-06.md  2026-07-07.md  2026-07-08.md  2026-07-09.md  (+15 more)
src/investment_os/: __init__.py  cli.py  datasource.py  insights.py  loaders.py  models.py  monitor_scoring.py  monitors.py  pipeline.py  portfolio_analysis.py  regime.py  scoring.py
tests/: conftest.py  test_agents.py  test_antenna.py  test_cli.py  test_cli_miip.py  test_loaders.py  test_monitor_scoring.py  test_monitors.py  test_pipeline.py  test_portfolio.py  test_regime.py  test_reporting.py  test_scoring.py
(+10 files in other folders)
